# util-vserver

./: .gitignore  AUTHORS  Makefile.am  Makefile.svn  NEWS  README  REQUIREMENTS  THANKS  build-all  compat.h  configure.ac  mkrelease  pathconfig.h.pathsubst  svnusers.map  update-doc  util-vserver.spec.in
debian/: control  (+13 more)
distrib/: Makefile.am
distrib/alpine/: initpost  initpre
distrib/breezy/: debootstrap.script
distrib/dapper/: debootstrap.script
distrib/debian/: debootstrap.script  initpost
distrib/defaults/: apt.conf  devs
distrib/edgy/: debootstrap.script
distrib/etch/: initpost  vserver-config.sh
distrib/gentoo/: init-vserver.sh  initpost  initpre  net.vserver  reboot.sh  shutdown.sh
distrib/gutsy/: debootstrap.script
distrib/hoary/: debootstrap.script
distrib/misc/: debootstrap.mirror  debootstrap.uri  environment  h2ext.desc  mtab  vprocunhide-files  vunify-exclude
distrib/redhat/: initctl  initpost  rc.sysinit
distrib/suse91/: initpost
distrib/template/: initpost  initpre
distrib/warty/: debootstrap.script
util-vserver/: .cvsignore  ChangeLog.sed  Makefile.am  NEWS  README  REQUIREMENTS  THANKS  build-all  compat-c99.h  compat.h  configure.ac  cvsusers.map  pathconfig.h.pathsubst  update-doc  util-vserver.spec.in  vserver.spec.in
util-vserver/contrib/: Makefile-files  make-manifest  manifest.dat.pathsubst  yum-2.3.3-chroot.patch  yum-2.3.4-chroot.patch  yum-2.6.0-chroot.patch
util-vserver/distrib/: Makefile-files  Makefile.am  fc1-minimum  install-fc1  install-mdk8.2  install-post.sh  install-pre.sh  install-rh7.2  install-rh7.3  install-rh8.0  install-rh9.0  rh7.3-minimum  rh9.0-minimum  sample.conf  sample.sh
util-vserver/doc/: .cvsignore  Makefile-files  beautify.xsl  cfg.txt  cfgdirdoc.dtd  changelog.txt  compat-xhtml.xsl  compatibility-xhtml.xsl  compatibility.dtd  compatibility.xml  configuration-flower.css  configuration-lsd.css  configuration-lsd1.css  configuration-xhtml.xsl  configuration.css  configuration.dtd  configuration.html  configuration.xml
util-vserver/ensc_fmt/: fmt.h  fmtx-32.c  fmtx.hc
util-vserver/ensc_vector/: Makefile-files  list-free.c  vector-foreach.c  vector-insert.c  vector.h  vector.hc
util-vserver/ensc_wrappers/: Makefile-files  wrappers-fcntl.hc  wrappers-io.hc  wrappers-iosock.hc  wrappers-mount.hc  wrappers-socket.hc  wrappers-stat.hc  wrappers-stdlib.hc  wrappers-unistd.hc  wrappers-vserver.hc  wrappers-wait.hc  wrappers.h  wrappers_handler.hc
util-vserver/kernel/: context.h  context_cmd.h  cvirt.h  cvirt_cmd.h  cvirt_def.h  debug.h  debug_cmd.h  dlimit.h  dlimit_cmd.h  global.h  inode.h  inode_cmd.h  legacy.h  limit.h  limit_def.h  namespace.h  namespace_cmd.h  network.h  network_cmd.h  sched.h  sched_def.h  signal.h  signal_cmd.h  switch.h  xid.h
util-vserver/lib/: .cvsignore  Makefile-files  bcaps-v13.c  bcaps_list-v13.c  capabilities.c  ccaps-v13.c  ccaps_list-v13.c  cflags-compat.c  cflags-v13.c  cflags_list-compat.c  cflags_list-v13.c  checkversion.c  comparevserverbyid.c  createskeleton-full.hc  flags-compat.c  flags-v13.c  flags.c  flags_list-compat.c  flags_list-v13.c  flags_list.c  fmt-32.c  fmt-64.c  fmt-internal.h  fmt.h  fmt.hc  fmtx-32.c  fmtx-64.c  fmtx.hc  fscompat_getiattr-fscompat.hc  fscompat_getiattr-v11.hc  fscompat_getiattr-v13.hc  fscompat_getiattr.c  fscompat_setiattr-fscompat.hc  fscompat_setiattr-v11.hc  fscompat_setiattr-v13.hc  fscompat_setiattr.c  getctx-compat.hc  getctx-legacy.hc  getctx.c  getfilecontext.c  (+135 more)
util-vserver/lib_internal/: Makefile-files  command-appendparameter.c  command-exec.c  command-free.c  command-init.c  command-reset.c  command-setparams.c  command-wait.c  command.h  coreassert.h  filecfg-iteratemultiline.c  filecfg-readentryflag.c  filecfg-readentrystr.c  filecfg.h  jail.h  jailintotempdir.c  matchlist-appendfiles.c  matchlist-compare.c  matchlist-destroy.c  matchlist-initbyvserver.c  matchlist-initmanually.c  matchlist-initrefserverlist.c  matchlist-printid.c  matchlist.h  matchvserverinfo-free.c  matchvserverinfo-init.c  pathinfo-append.c  pathinfo-test.c  pathinfo.h  string-destroy.c  string.h  string.hc  switchtowatchxid.c  sys_clone.h  unify-copy.c  unify-deunify.c  unify-isiunlinkable.c  unify-settime.c  unify-unify.c  unify.h  (+15 more)
util-vserver/linuxconf/: .cvsignore  Makefile-files  newvserver.defaults  newvserver.subst
util-vserver/m4/: changelog.am  ensc_cflags.m4  ensc_cxxcompiler.m4  ensc_dietlibc.m4  ensc_dietlibc_compat.m4  ensc_e2fscheck.m4  ensc_fpicsyscall.m4  ensc_initrddir.m4  ensc_kerneldir.m4  ensc_pathprog.m4  ensc_release.m4  ensc_syscall.m4  ensc_syscallnr.m4  ensc_uv_vrootdir.m4  gpgsig.am  install-notify.am  pkgconfig.am  validate.am
util-vserver/man/: Makefile-files  chcontext.8  newvserver.8  rebootmgr.8  reducecap.8  setctxlimit.8  vdu.8  vkill.8  vps.8  vrpm.8  vserver-copy.8  vserver-stat.8  vtop.8
util-vserver/scripts/: .cvsignore  Makefile-files  X  chcontext  distrib-info  functions  pkgmgmt  rootshell  save_s_context  start-vservers  util-vserver-vars.pathsubst  util-vserver-vars.subst  vapt-get  vapt-get-worker  vkill  vkill.subst  vpkg  vprocunhide  vprofile  vps  vps.pathsubst  vps.subst  vpstree  vrpm  vrpm-preload  vrpm-worker  vserver  vserver-build  vserver-build.apt-rpm  vserver-build.debootstrap  vserver-build.functions  vserver-build.functions.apt  vserver-build.functions.pkgmgmt  vserver-build.functions.rpm  vserver-build.functions.yum  vserver-build.rpm  vserver-build.skeleton  vserver-build.yum  vserver-copy  vserver-init  (+16 more)
util-vserver/src/: .cvsignore  Makefile-files  capability-compat.h  capchroot.c  chain-echo.c  chbind.c  chcontext.c  check-unixfile.c  chroot-cat.c  chroot-rm.c  chroot-sh.c  chxid.c  clearenv.c  compat-pivot_root.h  compat.h  context-sync.hc  ctx-kill.c  ctxlimit.c  enter-namespace.c  exec-cd.c  exec-ulimit.c  ext2fs.h  fakerunlevel.c  filetime.c  fstool-resolvectx.c  fstool.c  fstool.h  ifspec.c  keep-ctx-alive.c  listdevip.c  lockfile.c  lsxid.c  new-namespace.c  parserpmdump.c  pipe-sync.c  readlink.c  rebootmgr.c  reducecap.c  rpm-fake-resolver.c  rpm-fake.c  (+61 more)
(+766 files in other folders)
